test-data/invalid/surrounding-whitespace.jsx
const Test = () => (
  <Translate> space invaders </Translate>
);
